Messaging and HQ Window interface bug fixes / tweaks. (#2076)
- Reload the message list if message was sent to the user being viewed.
- Language correction on shift checkin.
- Moved slot description to separate row on scheduled shift checkin. Being below the position title was causing layout issues with long description.

--- a/app/styles/tables.scss
+++ b/app/styles/tables.scss
@@ -72,6 +72,10 @@ caption {
   color: #000;
 }
 
+.tr-no-top-padding {
+  padding-top: 0 !important;
+}
+
 @media not print {
   .table-sticky {
     thead tr:nth-child(1) th {
